--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-louygvgvghvhg
+<title>The IT World</title>
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap" rel="stylesheet">
+<li><h3>1. Team Name: Alert Campaigners</h3></li>
+<p>Because of unexpected change, our groups shift into 3 members. Hence, the KOVI Campaigners is not our team name anymore because we do not have a Korean partner. We change into Alert Campaigners, the excuse is most people do not pay attention to the damaged effect that COVID-19 potentially causes on account of the decrease of the cases in RMIT individuals and Vietnam in general. We came up with the Project idea which guides people stay alert and raise awareness of the COVID-19 implicit community infection, from which to have a prevention for a society.</p>
+    <li><h3>2. Personal Information:</h3></li>
+        <ul>
+            <li>- Trang:</li>
+            <img src="Aimaxinhthe.jpg" alt="trang" width="70%">
+            <p>My name is Pham Hoai Mai Trang, s3836323 is my student number and absolutely it is used for my email account s3836323@rmit.edu.vn.  My nationality is Vietnamese but I am not Saigonese.  I am from Vung Tau city, which is more tranquil than Ho Chi Minh city because of the beach. It is over one kilometer from Saigon to my hometown and takes an hour and a half to move. An introverted character describes me a lot not only in every relationship. But if this environment requires me to affiliate with teammates, I can balance my energy, my mood following specific situations, and after that I will return my original version of myself. About my hobbies, I spend most of my time practicing guitar and connecting with my intuition. The most valuable lesson I remind myself is your value is defined via your enlightenment and your personality in any circumstance. Honestly, I do not have the entire background about IT (Information Technology), but I am interested in Turtlebot which is a low-cost individual robot developed by Melonee Wise and Tully Foote in 2010. I took inspiration from high school when I took part in an automatic technology competition. </p>
+            <li>- Khanh:</li>
