--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#intro">Team Profile</a></li>
+							<li><a href="#one">Project ideas</a></li>
+							<li><a href="#two">IT Technologies</a></li>
+                            <li><a href="#three">IT Work</a></li>
+                            <li><a href="#four">Feedback</a></li>
+                            <li><a href="#five">References</a></li>
 						</ul>
 					</nav>
 				</div>
