--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Team Profile</a></li>
+							<li><a href="#intro">Team Profile & Feedback</a></li>
 							<li><a href="#one">Project ideas</a></li>
 							<li><a href="#two">IT Technologies</a></li>
                             <li><a href="#three">IT Work</a></li>
