--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
+                            <p>I will begin this report by introducing the team members. My group was established with members: Anh Quang, Huynh Khang, Trung Kien, Thien Minh. After some discussion, we decided to name the group White. Below are the individual profiles of each team member.</p>
+                            <h1>1.	Quang and Khang:</h1>
 							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
 							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
 							<ul class="actions">
