--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<h1<a href="#">References</a></h1>
+					<p>1.	Best Online Traffic School 2020, “Car Crash Statistics [2020]”, Best Online Traffic School, viewed 18 December 2020, <https://www.bestonlinetrafficschool.co/car-crash-statistics/>
+						2.	Elezaj, R, 2020, “How Do Self-Driving Cars Work?”, Iotforall, 22 June, viewed 28 December 2020,  <https://www.iotforall.com/how-do-self-driving-cars-work> 
+						3.	Guardian 2018, “Uber dashcam footage shows lead up to fatal self-driving crash – video”, Guardian, 22 March, viewed 18 December 2020,  “<https://www.theguardian.com/technology/video/2018/mar/22/in-car-footage-shows-fatal-self-driving-crash-video> 
+						4.	Synopsys n.d, “What is an Autonomous Car?”, Synopsys, viewed 18 December 2020, <https://www.synopsys.com/automotive/what-is-autonomous-car.html> 
+						5.	Thorpe, E. K 2018, “Gartner: By 2020, AI will create more jobs than it eliminates”, ITPro, 5 February, viewed 18 December 2020, <https://www.itpro.co.uk/automation/30463/gartner-by-2020-ai-will-create-more-jobs-than-it-eliminates> 
+						</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#one" class="active">Team Profile</a></li>
+						<li><a href="#two">Project Ideas & Feedback</a></li>
+						<li><a href="#three">IT Technologies</a></li>
+						<li><a href="#four">IT Work</a></li>
 					</ul>
 				</nav>
 				<footer>
