--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1<a href="#">References</a></h1>
-					<p>1.	Best Online Traffic School 2020, “Car Crash Statistics [2020]”, Best Online Traffic School, viewed 18 December 2020, <https://www.bestonlinetrafficschool.co/car-crash-statistics/>
-						2.	Elezaj, R, 2020, “How Do Self-Driving Cars Work?”, Iotforall, 22 June, viewed 28 December 2020,  <https://www.iotforall.com/how-do-self-driving-cars-work> 
-						3.	Guardian 2018, “Uber dashcam footage shows lead up to fatal self-driving crash – video”, Guardian, 22 March, viewed 18 December 2020,  “<https://www.theguardian.com/technology/video/2018/mar/22/in-car-footage-shows-fatal-self-driving-crash-video> 
-						4.	Synopsys n.d, “What is an Autonomous Car?”, Synopsys, viewed 18 December 2020, <https://www.synopsys.com/automotive/what-is-autonomous-car.html> 
-						5.	Thorpe, E. K 2018, “Gartner: By 2020, AI will create more jobs than it eliminates”, ITPro, 5 February, viewed 18 December 2020, <https://www.itpro.co.uk/automation/30463/gartner-by-2020-ai-will-create-more-jobs-than-it-eliminates> 
+					<p>*	Best Online Traffic School 2020, “Car Crash Statistics [2020]”, Best Online Traffic School, viewed 18 December 2020, <https://www.bestonlinetrafficschool.co/car-crash-statistics/>
+						*	Elezaj, R, 2020, “How Do Self-Driving Cars Work?”, Iotforall, 22 June, viewed 28 December 2020,  <https://www.iotforall.com/how-do-self-driving-cars-work> 
+						*	Guardian 2018, “Uber dashcam footage shows lead up to fatal self-driving crash – video”, Guardian, 22 March, viewed 18 December 2020,  “<https://www.theguardian.com/technology/video/2018/mar/22/in-car-footage-shows-fatal-self-driving-crash-video> 
+						*	Synopsys n.d, “What is an Autonomous Car?”, Synopsys, viewed 18 December 2020, <https://www.synopsys.com/automotive/what-is-autonomous-car.html> 
+						*	Thorpe, E. K 2018, “Gartner: By 2020, AI will create more jobs than it eliminates”, ITPro, 5 February, viewed 18 December 2020, <https://www.itpro.co.uk/automation/30463/gartner-by-2020-ai-will-create-more-jobs-than-it-eliminates> 
 						</p>
 				</header>
 				<nav id="nav">
