--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<img src="images/banner.jpg" alt="" />
 								</div>
 								<div class="container">
-									<header class="major">
+									<header>
 										<h2>Read Only</h2>
 										<p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
