--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 								</div>
 								<div class="container">
 									<header>
+										<p>I will begin this report by introducing the team members. My group was established with members: Anh Quang, Huynh Khang, Trung Kien, Thien Minh. After some discussion, we decided to name the group White. Below are the individual profiles of each team member.</p>
 										<h2>Read Only</h2>
 										<p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
