--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 								<div class="container">
 									<header>
 										<p>I will begin this report by introducing the team members. My group was established with members: Anh Quang, Huynh Khang, Trung Kien, Thien Minh. After some discussion, we decided to name the group White. Below are the individual profiles of each team member.</p>
-										<h2>Read Only</h2>
+										<h2>1.	Quang and Khang:</h2>
+										<h2>2.	Quang and Kien:</h2>
+										<h2>3.	Quang and Minh:</h2>
 										<p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
