--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 								<div class="container">
 									<header>
 										<p>I will begin this report by introducing the team members. My group was established with members: Anh Quang, Huynh Khang, Trung Kien, Thien Minh. After some discussion, we decided to name the group White. Below are the individual profiles of each team member.</p>
-										<h2>1.	Quang and Khang:</h2>
+										<h2>Quang and Khang:</h2>
 										<p>For Khang, he is a good, responsible classmate and always helps his team members. Compare the survey results of my Big-five Personality Test and Khang, we also have good interactions with the surroundings, and the ability to communicate and collaborate with team members. However, Khang is better than me in terms of creativity such as content creation and design. During the work, Khang may assist the team in modifying the group's website.</p>
-										<h2>2.	Quang and Kien:</h2>
+										<h2>Quang and Kien:</h2>
 										<p>For Kien, based on the survey, Kien is a sociable, not angry person who always resolves conflicts in the group. He always stays calm when analyzing one aspect of a problem, reasoning carefully and coming up with the best solution. With that prudence, it will help synthesize the opinions of members and come up with suitable plans to avoid conflicts occurring.</p>
-										<h2>3.	Quang and Minh:</h2>
+										<h2>Quang and Minh:</h2>
 										<p>Minh is the most responsible member of the group. Through the survey, we have opposing personalities. I am a leader, always seeing the strengths and weaknesses of each member as well as dividing exercises appropriately for each person's abilities. However, Minh is very fluent in IT, which will help the team solve IT and computer related issues. In general, assigning him the right task will improve the quality of the exercise.</p>
 										<h2>Notion</h2>
 										<p>In my perspective, the ability of a team is not determined by the number of excellent members in the team, but performance is what determines the success. The following important things when working in groups. The first is the cooperation of the members. Need to respect and listen to the opinions of others to see good and bad points, discuss together, and contribute to get effective working results. The second is the rational and fair assignment of work. Divide workload evenly among members and ensure the work is completed on schedule. The third is to respect and help each other. Working in groups, all members must know to help and respect each other, if your teammates have difficulty, please be willing to share and help, this will create a bond between the members. And finally, always on time. Always be on time, it will save other team members from waiting for you or spending more time repeating what was discussed earlier.
