--- a/index.html
+++ b/index.html
@@ -77,16 +77,10 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
+									<h3>Overview</h3>
+									<p>The Discord chat platform and RMIT website will be the core of this project. This will be a FAQ or Chat Bot with the Speech Recognition feature to allow a user to request RMIT information through a voice channel and to produce a response using an online API to parse/interpret natural language returned either as a visual or or verbal chat response. While there are a wide variety of uses for this technology, the primary focus of this project will be for visually impaired people who have issues understanding the content in the RMIT and RMIT.edu websites. As it stands, most of the information is displayed as text and videos are difficult to decipher from the dialogue. This project aims to create an interactive medium to provide some of the functionality found in a mobile application while providing accessibility and use with words for the visually impaired. The project is targeted mostly to visually disabled participants and, if they so wish, will be accessed by anyone.</p>
+									<h3>Motivation</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
-									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
-									</ul>
 								</div>
 							</section>
 
