--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										● Programing familiarity of Disk Bot Libraries in particular
 										● API working experience
 										● Experience with functions associated with ffmpeg/audio
-										● Familiarity with website manipulation to collect data via API calls or web scraping
+										● Familiarity with website manipulation to collect data via API calls or web scraping.
 										Any software that needs to be written in the language in question will be picked from the bot repository. Such hardware is not needed since it is necessary to use either a Digital Ocean server or the Web Services Amazon Server, but it can also be used with a Raspberry Pi or with some other related device on Linux. The probability to find the required software and hardware is very strong since it is open source software while the hardware, be it a VPS, or a Raspberry Pi, is easily accessible. As regard to skills however the software is the more relevant – although in practice, if the components are already known or the requirement is to find a particular piece of software then such as task would be possible. The full source code for Python Bot using the Node.js framework is also available, although to use this programming language one would need to know Python at least somewhat.
 										</p>
 									<h3>Outcome</h3>
