--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<header>
 										<p>I will begin this report by introducing the team members. My group was established with members: Anh Quang, Huynh Khang, Trung Kien, Thien Minh. After some discussion, we decided to name the group White. Below are the individual profiles of each team member.</p>
 										<h2>Quang and Khang:</h2>
-										<a href="#" class="image"><img src="images/khang.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/Khang.png" alt="" /></a>
 										<p>For Khang, he is a good, responsible classmate and always helps his team members. Compare the survey results of my Big-five Personality Test and Khang, we also have good interactions with the surroundings, and the ability to communicate and collaborate with team members. However, Khang is better than me in terms of creativity such as content creation and design. During the work, Khang may assist the team in modifying the group's website.</p>
 										<h2>Quang and Kien:</h2>
 										<p>For Kien, based on the survey, Kien is a sociable, not angry person who always resolves conflicts in the group. He always stays calm when analyzing one aspect of a problem, reasoning carefully and coming up with the best solution. With that prudence, it will help synthesize the opinions of members and come up with suitable plans to avoid conflicts occurring.</p>
