--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 										<a href="#" class="image"><img src="images/Quang5.png" alt="" /></a>
 										<p>For Khang, he is a good, responsible classmate and always helps his team members. Compare the survey results of my Big-five Personality Test and Khang, we also have good interactions with the surroundings, and the ability to communicate and collaborate with team members. However, Khang is better than me in terms of creativity such as content creation and design. During the work, Khang may assist the team in modifying the group's website.</p>
 										<h2>Quang and Kien:</h2>
+										<a href="#" class="image"><img src="images/QuangMB.png" alt="" /></a>
+										<a href="#" class="image"><img src="images/KienMB.png" alt="" /></a>
 										<p>For Kien, based on the survey, Kien is a sociable, not angry person who always resolves conflicts in the group. He always stays calm when analyzing one aspect of a problem, reasoning carefully and coming up with the best solution. With that prudence, it will help synthesize the opinions of members and come up with suitable plans to avoid conflicts occurring.</p>
 										<h2>Quang and Minh:</h2>
 										<p>Minh is the most responsible member of the group. Through the survey, we have opposing personalities. I am a leader, always seeing the strengths and weaknesses of each member as well as dividing exercises appropriately for each person's abilities. However, Minh is very fluent in IT, which will help the team solve IT and computer related issues. In general, assigning him the right task will improve the quality of the exercise.</p>
