--- a/index.html
+++ b/index.html
@@ -145,22 +145,16 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
+									<h5>What kind of work is done by the IT professional?</h5>
+									<p>INSULA: "The Insula Group is an organization in Australia that provides a wide variety of IT services and leading tech products in the industry. Matthew Furlong states “our company (INSULA) produces applications for a wide variety of industries. It has different positions, ranging from developers that cut code and improve the product, contractors who sell the software to other businesses, and developers that use it. "What we are doing is to make our solutions more effective and better for you." We manage Microsoft SQL large-scale databases that allow us to provide data schemes and applications from SQL" Jodi Dayan-Hill, Managing Director at INSULA I will be responsible for insulating the budget on top of raising and managing cash flow in the business.” “I am also responsible for quality, support and compliance. Our business has requirements for maintaining a secure database, but in order to do so, we must have the highest level of security. I will be responsible for all aspects of protecting our customers' data.” Matthew Furlong, Managing Director of INSULA. “Running a business successfully is all about having the right people and planning ahead to overcome obstacles. I will be responsible for bringing on board professionals with the right experience to deliver innovative solutions to our business and the needs of our clients.”</p>
+									<h5>What kinds of people does the IT professional interact with? Are they other IT professionals? Clients? Investors? The general public?</h5>
+									<p>'Everything from IT experts, consumers and investors and all our employees, programme developer working in all fields from database design to PHP web creation and numerous other languages to Microsoft Du Jour and cloud appliances, so that they are cutting code into other applications. Our other experts, we include IT-based project managers, organization consultants, distribution and marketing consultants. Our core value is certainly the service we offer. We focus on delivering excellence as a service, rather than just filling in a specialist niche. Our goal is to solve your challenges and give you the greatest return on your investment by using the right solutions. Our staff is always trained and focused on your success ". Given its technology focus, it’s no surprise that technology is a key focus for the company. This is where they place a particular emphasis on staying on the cutting edge.</p>
+									<h5>Do you deal with investors or clients personally?</h5>
+									<p>"I'm an account manager for about 40 separate customers, so my job is to make sure they're aware of what our tech deals are and what our service can do for them. My job is to go through the market experiments to try to learn how their organization works and how we are to convert their business activities into our software and to translate how we are going to use our software on the basis of what they are doing and/or changing them to enhance or improve what they are doing. When we get our applications in, I have to educate all end users and then, after the technologies have been applied, our support department will support the future. All of that requires a huge amount of management skills and your support staff, who will make sure everything is running in a smooth way, and managing the relationships and input of what our software can do and then building a very close working relationship with all our reseller partners and getting them to do the same. There is a lot to do. All this data entry and stuff, and then you add in all the administration of all the different staff roles and that is all wrapped up in this software”</p>
+									<h5>Where does the IT professional spend most of their time?</h5>
+									<p>"Most of my time is focused on the applications bought by our current customers and/or potential customers. For our current users, they consider their needs, ensure they make the best of the app, introduce new capabilities, new functionality, new processes for existing companies, evaluate how we can integrate, customize and improve their processes into our applications. I can explain to our developers what needs to be done with our software to enable them to use it in the way they want, if we have to do development in our software." 'For potential users, we must create new content, and new features in the product to make it effective to use it, based on the degree that we call gap analytics (to identify whether there is a gap between what they do now and what their software does).'</p>
+									<h5>5.What aspect of their position is most challenging?</h5>
+									<p>"We deal with so many people who are different from the sales consultants, draftsmen, engineers, executives, accountants, building supervisors who have a different background, aspirations, knowledge and know-how of companies. We deal with people on job sites, off on equipment, all the numerous company owners, all of these. Too many diverse people with different cultures, different perspectives, different aspirations and attitudes are not an easy feat to make everyone happy."</p>
 								</div>
 							</section>
 
