--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/RMIT.png" alt="" /></span>
 					<h1<a href="#">References</a></h1>
 					<p>- Best Online Traffic School 2020, “Car Crash Statistics [2020]”, Best Online Traffic School, viewed 18 December 2020, <https://www.bestonlinetrafficschool.co/car-crash-statistics/>
 						- Elezaj, R, 2020, “How Do Self-Driving Cars Work?”, Iotforall, 22 June, viewed 28 December 2020,  <https://www.iotforall.com/how-do-self-driving-cars-work> 
