--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/ITech.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header>
